--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="panel">
-        <h1>Language Quiz Application</h1>
+        <h1>Language Learning Game</h1>
 
         <div id="loginForm">
             <input type="text" id="username" placeholder="Username">
